# rust_exercises

./: Cargo.toml  README.md
src/: main.rs
ws_app/: Cargo.toml
ws_app/src/: ws_gui.rs  ws_srv.rs
