[package]
name = "rs-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21"
anyhow = "1"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = "0.18"
uuid = { version = "1", features = ["v4", "fast-rng"] }
